--- a/public/index.html
+++ b/public/index.html
@@ -5,25 +5,27 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+
+    <!-- Open Graph Protocol -->
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Order Online  or reserve a table in the little lemon restaurant. Open 24hrs in the Main street, Chicago."
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
+    <meta name="og:title" content="Little Lemon Restaurant" />
+    <meta
+      name="og:description"
+      content="Order or Reserve a table at Little lemon restaurant"
+    />
+    <meta
+      name="og:image"
+      content="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSipWnobbjHL1WBAToEJWo0h_t5tPy8UbBXdMZwI5L38W5zRUvC3K7shAnHow&s"
+    />
+    <!--  -->
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+
     <title>React App</title>
   </head>
   <body>
